fixed image spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -71,15 +71,38 @@ body p {
 
 #portfolio {
 	width:100%;
-	height:400px;
+	height:380px;
 	
 }
 
 #portfolio img {
-	padding:7px;
-	border: 1px solid black;
-	margin: 0px 4em 20px 0px;
-	box-shadow:1px 0px 1px gray;
+	border: 1px solid; 
+	padding: 5px;
+}
+
+#container {
+    height: 125px;
+    text-align: justify;
+    -ms-text-justify: distribute-all-lines;
+    text-justify: distribute-all-lines;
+
+    /* just for demo */
+    min-width: 612px;
+}
+
+.box1, .box2, .box3, .box4 {
+    width: 212px;
+    height: 162px;
+    vertical-align: top;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+}
+.stretch {
+    width: 100%;
+    display: inline-block;
+    font-size: 0;
+    line-height: 0
 }
 
 .about {
@@ -157,3 +180,5 @@ input, label {
 .footer p {
 	color:white;
 }
+
+
